--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="row rowHeight">  
                     <div class="col-lg-2"></div>      
                     <div class="col-lg-8" id="question">
-                      <div id="start">Start </div>
+                      <div> <button id="start">Start</button> </div>
                     </div>       
                     <div class="col-lg-2"></div>                       
             </div>
